@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.stofa.dk" version="1.0.0" name="Stofa web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.stofa.dk" version="1.0.1" name="Stofa web-tv" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
-        <import addon="script.module.buggalo" version="1.0.1"/>
+        <import addon="script.module.buggalo" version="1.1.2"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
