@@ -1,3 +1,6 @@
+[B]Version 1.0.1 - 2012-10-22[/B]
+- Added buggalo url
+
 [B]Version 1.0.0 - 2012-07-04[/B]
 - Updated graphics for first public release
 
